[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/entities/PistolBot.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/Entity.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/robot-boss-enemy.png" type="Texture" id=3]
[ext_resource path="res://scenes/weapons/StandardWeapon.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 15 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 16 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 17 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 18 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 12.9059
height = 20.7509

[node name="PistolBot" groups=["Enemies"] instance=ExtResource( 2 )]
script = ExtResource( 1 )
speed = 50
weapon = NodePath("StandardWeapon")
patrol_path = NodePath("")
attack_delay = 1.0
vision_range = 300

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "default"

[node name="HitBox" parent="." index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 19 )

[node name="StandardWeapon" parent="." index="2" instance=ExtResource( 4 )]
delay = 3.0
damage = 3

[node name="AttackDelay" type="Timer" parent="." index="3"]
one_shot = true
autostart = true

[node name="SearchTimer" type="Timer" parent="." index="4"]
wait_time = 5.0
one_shot = true

[connection signal="died" from="." to="." method="_on_PistolBot_died"]
[connection signal="timeout" from="SearchTimer" to="." method="_on_SearchTimer_timeout"]
